--- a/app/src/main/res/layout/my_meeting_card_chat.xml
+++ b/app/src/main/res/layout/my_meeting_card_chat.xml
@@ -31,7 +31,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:textSize="12sp"
-                android:text="매칭이 완료되었습니다. 채팅을 시작해보세요."
+                android:text=""
                 android:gravity="center_vertical"
                 android:textColor="#5E5E5E"
                 android:layout_marginLeft="7dp"
@@ -49,7 +49,7 @@
                 android:id="@+id/time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="오후 2:22"
+                android:text=""
                 android:textColor="#929191"
                 android:gravity="center_horizontal"
                 android:textSize="10dp"
@@ -65,6 +65,7 @@
                 android:textStyle="bold"
                 android:gravity="center_horizontal|center_vertical"
                 android:textSize="10dp"
+                android:visibility="invisible"
                 android:fontFamily="@font/nanumgothic_font_family"/>
         </LinearLayout>
     </RelativeLayout>
