--- a/app/src/main/res/layout/meeting_team_home.xml
+++ b/app/src/main/res/layout/meeting_team_home.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_marginBottom="21dp"
     android:weightSum="25"
     android:orientation="horizontal"
     >
@@ -159,8 +160,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:weightSum="28"
-                    android:orientation="horizontal"
-                    android:paddingBottom="22dp">
+                    android:orientation="horizontal">
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
@@ -173,6 +173,7 @@
                         android:src="@drawable/user_profile_no_img"
                         android:layout_weight="7"
                         android:layout_marginTop="22dp"
+                        android:layout_marginBottom="22dp"
                         />
                     <LinearLayout
                         android:layout_width="0dp"
