--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,36 @@
             android:background="@null"
             android:theme="@style/MyActionBar"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="57dp"
+            android:orientation="horizontal">
+            <TextView
+                android:id="@+id/ticket_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="right|center_vertical"
+                android:text="0"
+                android:textSize="14dp"
+                android:layout_marginRight="12.4dp"
+                android:fontFamily="@font/roboto_font_family"/>
+
+            <TextView
+                android:id="@+id/unread_noti_count"
+                android:layout_width="wrap_content"
+                android:layout_height="20.06dp"
+                android:layout_gravity="right"
+                android:layout_marginTop="10dp"
+                android:layout_marginRight="60dp"
+                android:background="@drawable/chat_count_bg"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center_horizontal|center_vertical"
+                android:text="2"
+                android:textColor="@color/colorPrimary"
+                android:textSize="10dp"
+                android:textStyle="bold" />
+        </FrameLayout>
+
     </FrameLayout>
 
 
