--- a/app/src/main/res/layout/activity_alliance_list.xml
+++ b/app/src/main/res/layout/activity_alliance_list.xml
@@ -11,122 +11,48 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
-            android:background="@color/colorPrimary"
-            android:theme="@style/MyActionBar2"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal|center_vertical"
-                android:text="프리미엄 제휴매장"
-                android:textSize="14dp"
-                android:textColor="@color/colorNormal"
-                android:textStyle="bold"
-                android:fontFamily="@font/nanumgothic_font_family">
-            </TextView>
-        </androidx.appcompat.widget.Toolbar>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:orientation="horizontal"
-        android:weightSum="9.99"
-        android:background="@drawable/rectangle_gray_solid"
-        >
-        <Button
-            android:id="@+id/btn_date_1"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="신촌/홍대"
-            android:background="?android:selectableItemBackgroundBorderless"
-            android:textSize="14sp"
-            android:textColor="#FC7F2D"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_weight="3.33"
-            android:fontFamily="@font/binggrae_font_family"/>
-        <Button
-            android:id="@+id/btn_date_2"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="건대/왕십리"
-            android:background="?android:selectableItemBackgroundBorderless"
-            android:textSize="14sp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_weight="3.33"
-            android:fontFamily="@font/binggrae_font_family"/>
-        <Button
-            android:id="@+id/btn_date_3"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:text="강남"
-            android:background="?android:selectableItemBackgroundBorderless"
-            android:textSize="14sp"
-            android:gravity="center_vertical|center_horizontal"
-            android:layout_weight="3.33"
-            android:fontFamily="@font/binggrae_font_family"/>
-        </LinearLayout>
-        <ScrollView
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <LinearLayout
+            <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="vertical">
-                <LinearLayout
+                android:orientation="vertical"
+                android:layout_marginTop="52dp"
+                android:fitsSystemWindows="true"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
+                <ListView
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:focusableInTouchMode="true"
+                    android:id="@+id/listview_alliance"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_marginLeft="24dp"
-                    android:layout_marginTop="7.1dp">
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*프리미엄 제휴매장에서 제휴쿠폰 받아가세요!"
-                        android:textSize="13dp"
-                        android:textColor="@color/colorBlack"
-                        android:fontFamily="@font/nanumgothic_font_family"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*당일날 해당 지역에서 사용 가능한 제휴쿠폰을 드립니다!"
-                        android:textSize="13dp"
-                        android:textColor="@color/colorBlack"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="@font/nanumgothic_font_family"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="*매칭 채팅에서 쿠폰 사용하기를 직원에게 부탁하세요!"
-                        android:textSize="13dp"
-                        android:textColor="@color/colorBlack"
-                        android:layout_marginTop="5dp"
-                        android:fontFamily="@font/nanumgothic_font_family"
-                        />
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="12.1dp">
-                    <com.yamigu.yamigu_app.CustomLayout.PlaceCard
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        app:name="오렌지룸 신촌점"
-                        app:phone="02-365=0789"
-                        app:location="신촌역 5분거리"
-                        app:benefit1="제휴 10,000원 쿠폰"
-                        app:benefit2="*소주 또는 맥주 2병 제공"
-                        app:image="@drawable/img_orangeroom">
-                    </com.yamigu.yamigu_app.CustomLayout.PlaceCard>
-                </LinearLayout>
-            </LinearLayout>
-        </ScrollView>
+                    android:layout_marginTop="13dp"
+                    android:paddingBottom="21dp">>
+                </ListView>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <!--/ScrollView-->
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:background="@color/colorPrimary"
+                android:theme="@style/MyActionBar2"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+                <TextView
+                    android:id="@+id/tv_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="만나기 좋은 매장"
+                    android:textSize="14dp"
+                    android:textColor="@color/colorNormal"
+                    android:fontFamily="@font/nanumgothic_font_family_bold"
+                    android:textStyle="bold">
+                </TextView>
+            </androidx.appcompat.widget.Toolbar>
+        </FrameLayout>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
