--- a/app/src/main/res/layout/activity_whatis_yamigu.xml
+++ b/app/src/main/res/layout/activity_whatis_yamigu.xml
@@ -18,23 +18,62 @@
             android:theme="@style/MyActionBar2"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
             <TextView
+                android:id="@+id/title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:text="야미구란?"
                 android:textSize="14dp"
                 android:textColor="@color/colorNormal"
-                android:fontFamily="@font/nanumgothic_font_family"
+                android:fontFamily="@font/nanumgothic_font_family_bold"
                 android:textStyle="bold">
             </TextView>
         </androidx.appcompat.widget.Toolbar>
-        <ScrollView
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <ImageView
-                android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:weightSum="9"
+            android:orientation="horizontal"
+            android:background="@drawable/rectangle_gray_solid">
+            <Button
+                android:id="@+id/btn_tab1"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:src="@drawable/img_yamigu_guide"/>
-        </ScrollView>
+                android:text="야미구란?"
+                android:textSize="15dp"
+                android:textColor="@color/colorNonselect"
+                android:fontFamily="@font/binggrae_font_family"
+                android:gravity="center_vertical|center_horizontal"
+                android:layout_weight="3"
+                android:background="?android:selectableItemBackgroundBorderless"/>
+            <Button
+                android:id="@+id/btn_tab2"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="안전한 만남"
+                android:textSize="15dp"
+                android:textColor="@color/colorNonselect"
+                android:fontFamily="@font/binggrae_font_family"
+                android:gravity="center_vertical|center_horizontal"
+                android:layout_weight="3"
+                android:background="?android:selectableItemBackgroundBorderless"/>
+            <Button
+                android:id="@+id/btn_tab3"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:text="야미구 후기"
+                android:textSize="15dp"
+                android:textColor="@color/colorNonselect"
+                android:fontFamily="@font/binggrae_font_family"
+                android:gravity="center_vertical|center_horizontal"
+                android:layout_weight="3"
+                android:background="?android:selectableItemBackgroundBorderless"/>
+        </LinearLayout>
+        <androidx.viewpager.widget.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            >
+        </androidx.viewpager.widget.ViewPager>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
