--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -266,6 +266,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_horizontal"
+                        android:layout_marginBottom="-20dp"
                         >
                     </com.yamigu.yamigu_app.CustomLayout.CustomViewPager>
                     <com.google.android.material.tabs.TabLayout
