--- a/app/src/main/res/drawable/state_pressed_ripple.xml
+++ b/app/src/main/res/drawable/state_pressed_ripple.xml
@@ -2,7 +2,7 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="#FF4D00">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="#AF1D00"/>
+            <solid android:color="#FF4D00"/>
         </shape>
         <color android:color="#FF4D00"/>
     </item>
