--- a/app/src/main/res/layout/fragment_wlist.xml
+++ b/app/src/main/res/layout/fragment_wlist.xml
@@ -128,73 +128,88 @@
 
 
         </LinearLayout>
-        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
-            android:id="@+id/swiperefreshlayout"
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <ScrollView
+            <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+                android:id="@+id/swiperefreshlayout"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="#F1F1F1"
-
-                >
-                <LinearLayout
-                    android:id="@+id/wating_card_root"
+                android:layout_height="match_parent">
+                <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="vertical"
+                    android:background="#F1F1F1"
 
-                    android:paddingTop="21dp"
-                    android:paddingBottom="21dp">
-                    <!--com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="21dp"
-                        app:label="1"
-                        app:date="5월28일"
-                        app:description="한명이 술을 잘 못마셔요!"
-                        app:place="신촌/홍대"
-                        app:profile1="연세대학교 (24)"
-                        app:profile2="전기전자공학부">
-                    </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2>
-                    <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="21dp"
-                        app:label="2"
-                        app:date="5월28일"
-                        app:description="저희랑 재밌게 노실 분~"
-                        app:place="건대/왕십리"
-                        app:profile1="고려대학교 (21)"
-                        app:profile2="기계공학부">
-                    </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2>
-                    <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="21dp"
-                        app:label="3"
-                        app:date="5월28일"
-                        app:description="서강대 새내기랑 미팅하실 분!"
-                        app:place="강남"
-                        app:profile1="서강대학교 (20)"
-                        app:profile2="경제학부">
-                    </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2>
-                    <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        app:date="5월28일"
-                        app:description="한명이 술을 잘 못마셔요!"
-                        app:place="신촌/홍대"
-                        app:profile1="연세대학교 (24)"
-                        app:profile2="전기전자공학부">
-                    </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2-->
-                </LinearLayout>
-            </ScrollView>
-        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+                    >
+                    <LinearLayout
+                        android:id="@+id/wating_card_root"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
 
+                        android:paddingTop="21dp"
+                        android:paddingBottom="21dp">
+                        <!--com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="21dp"
+                            app:label="1"
+                            app:date="5월28일"
+                            app:description="한명이 술을 잘 못마셔요!"
+                            app:place="신촌/홍대"
+                            app:profile1="연세대학교 (24)"
+                            app:profile2="전기전자공학부">
+                        </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2>
+                        <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="21dp"
+                            app:label="2"
+                            app:date="5월28일"
+                            app:description="저희랑 재밌게 노실 분~"
+                            app:place="건대/왕십리"
+                            app:profile1="고려대학교 (21)"
+                            app:profile2="기계공학부">
+                        </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2>
+                        <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginTop="21dp"
+                            app:label="3"
+                            app:date="5월28일"
+                            app:description="서강대 새내기랑 미팅하실 분!"
+                            app:place="강남"
+                            app:profile1="서강대학교 (20)"
+                            app:profile2="경제학부">
+                        </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2>
+                        <com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            app:date="5월28일"
+                            app:description="한명이 술을 잘 못마셔요!"
+                            app:place="신촌/홍대"
+                            app:profile1="연세대학교 (24)"
+                            app:profile2="전기전자공학부">
+                        </com.yamigu.yamigu_app.CustomLayout.WaitingTeamCard2-->
+                    </LinearLayout>
+                </ScrollView>
+            </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+            <TextView
+                android:id="@+id/tv_no_meeting"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="56dp"
+                android:textColor="@color/colorNonselect"
+                android:text="미팅 대기팀이 없습니다"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:textSize="20dp"
+                android:visibility="invisible">
+            </TextView>
+        </FrameLayout>
     </LinearLayout>
 </LinearLayout>
