--- a/app/src/main/res/layout/date_view.xml
+++ b/app/src/main/res/layout/date_view.xml
@@ -12,113 +12,117 @@ android:orientation="vertical">
     android:layout_marginTop="16.7dp"
     android:src="@drawable/question_when"
     />
-<LinearLayout
-    android:id="@+id/select_pane_when"
-    android:layout_width="387dp"
-    android:layout_height="wrap_content"
-    android:layout_marginTop="16.7dp"
-    android:layout_gravity="center_horizontal"
-    android:orientation="vertical"
-    android:background="@drawable/shadow_box">
-    <Button
-        android:id="@+id/btn_select_date1"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="379dp"
-        android:layout_height="55dp"
-        android:background="@null"
-        android:text="5월 28일"
-        android:fontFamily="@font/nanumgothic_font_family"
-        android:gravity="center"
-        />
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#D9D9D9"
-        ></LinearLayout>
-    <Button
-        android:id="@+id/btn_select_date2"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="379dp"
-        android:layout_height="55dp"
-        android:background="@null"
-        android:text="5월 29일"
-        android:fontFamily="@font/nanumgothic_font_family"
-        android:gravity="center"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#D9D9D9"
-        ></LinearLayout>
-    <Button
-        android:id="@+id/btn_select_date3"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="379dp"
-        android:layout_height="55dp"
-        android:background="@null"
-        android:text="5월 30일"
-        android:fontFamily="@font/nanumgothic_font_family"
-        android:gravity="center"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#D9D9D9"
-        ></LinearLayout>
-    <Button
-        android:id="@+id/btn_select_date4"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="379dp"
-        android:layout_height="55dp"
-        android:background="@null"
-        android:text="5월 31일"
-        android:fontFamily="@font/nanumgothic_font_family"
-        android:gravity="center"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#D9D9D9"
-        ></LinearLayout>
-    <Button
-        android:id="@+id/btn_select_date5"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="379dp"
-        android:layout_height="55dp"
-        android:background="@null"
-        android:text="6월 1일"
-        android:fontFamily="@font/nanumgothic_font_family"
-        android:gravity="center"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#D9D9D9"
-        ></LinearLayout>
-    <Button
-        android:id="@+id/btn_select_date6"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="379dp"
-        android:layout_height="55dp"
-        android:background="@null"
-        android:text="6월 2일"
-        android:fontFamily="@font/nanumgothic_font_family"
-        android:gravity="center"
-        />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="#D9D9D9"
-        ></LinearLayout>
-    <Button
-        android:id="@+id/btn_select_date7"
-        android:layout_gravity="center_horizontal"
-        android:layout_width="379dp"
-        android:layout_height="55dp"
-        android:background="@null"
-        android:text="6월 3일"
-        android:fontFamily="@font/nanumgothic_font_family"
-        android:gravity="center"
-        />
-</LinearLayout>
+        android:layout_height="match_parent">
+        <LinearLayout
+            android:id="@+id/select_pane_when"
+            android:layout_width="387dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16.7dp"
+            android:layout_gravity="center_horizontal"
+            android:orientation="vertical"
+            android:background="@drawable/shadow_box">
+            <Button
+                android:id="@+id/btn_select_date1"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="379dp"
+                android:layout_height="55dp"
+                android:background="@null"
+                android:text="5월 28일"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"
+                ></LinearLayout>
+            <Button
+                android:id="@+id/btn_select_date2"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="379dp"
+                android:layout_height="55dp"
+                android:background="@null"
+                android:text="5월 29일"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"
+                ></LinearLayout>
+            <Button
+                android:id="@+id/btn_select_date3"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="379dp"
+                android:layout_height="55dp"
+                android:background="@null"
+                android:text="5월 30일"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"
+                ></LinearLayout>
+            <Button
+                android:id="@+id/btn_select_date4"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="379dp"
+                android:layout_height="55dp"
+                android:background="@null"
+                android:text="5월 31일"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"
+                ></LinearLayout>
+            <Button
+                android:id="@+id/btn_select_date5"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="379dp"
+                android:layout_height="55dp"
+                android:background="@null"
+                android:text="6월 1일"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"
+                ></LinearLayout>
+            <Button
+                android:id="@+id/btn_select_date6"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="379dp"
+                android:layout_height="55dp"
+                android:background="@null"
+                android:text="6월 2일"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center"
+                />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#D9D9D9"
+                ></LinearLayout>
+            <Button
+                android:id="@+id/btn_select_date7"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="379dp"
+                android:layout_height="55dp"
+                android:background="@null"
+                android:text="6월 3일"
+                android:fontFamily="@font/nanumgothic_font_family"
+                android:gravity="center"
+                />
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
