--- a/app/src/main/res/layout/date_view.xml
+++ b/app/src/main/res/layout/date_view.xml
@@ -9,17 +9,16 @@ android:orientation="vertical">
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="18dp"
-    android:layout_marginTop="16.7dp"
     android:src="@drawable/question_when"
     />
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="16.7dp">
         <LinearLayout
             android:id="@+id/select_pane_when"
             android:layout_width="387dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16.7dp"
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             android:background="@drawable/shadow_box">
