--- a/app/src/main/res/layout/activity_chatting.xml
+++ b/app/src/main/res/layout/activity_chatting.xml
@@ -76,6 +76,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
                     <EditText
+                            android:singleLine="true"
                         android:id="@+id/et_message"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
