--- a/app/src/main/res/layout/my_meeting_card_after.xml
+++ b/app/src/main/res/layout/my_meeting_card_after.xml
@@ -305,6 +305,7 @@
         android:layout_height="match_parent"
         android:visibility="gone">
         <EditText
+                            android:singleLine="true"
             android:id="@+id/et_feedback"
             android:layout_width="234dp"
             android:layout_height="132dp"
