--- a/app/src/main/res/layout/profile_card.xml
+++ b/app/src/main/res/layout/profile_card.xml
@@ -69,6 +69,7 @@
                             android:textStyle="bold"></TextView>
 
                         <EditText
+                            android:singleLine="true"
                             android:id="@+id/et_nickname"
                             android:layout_width="wrap_content"
                             android:layout_height="match_parent"
@@ -82,7 +83,6 @@
                             android:textSize="25dp"
                             android:textStyle="bold"
                             android:visibility="gone"
-
                             ></EditText>
 
                         <TextView
